k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dutchkem
  labels:
    app.kubernetes.io/part-of: dutchkem-fortress
